--- a/node22.html
+++ b/node22.html
@@ -124,7 +124,7 @@ Instroducción</A>
 </H1>
 
 <P>
-In computer science, a parsing expression grammar, or PEG, is a type of
+In computer science, a <A NAME="3512"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3514"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
 analytic formal grammar, i.e. it describes a formal language in terms
 of a set of rules for recognizing strings in the language.
 
@@ -144,6 +144,16 @@ context-free grammars (CFGs), but they have a different interpretation:
 to be done in practice, e.g. by a recursive descent parser.
 </LI>
 </UL>
+
+<P>
+Unlike CFGs, PEGs cannot be <SPAN ID="txt3258">ambiguous</SPAN>; 
+<I>if a string parses, it has exactly
+one valid parse tree</I>. 
+
+<P>
+It is conjectured that there exist context-free
+languages that cannot be parsed by a PEG, but this is
+not yet proven. 
 
 <P>
 
