--- a/node85.html
+++ b/node85.html
@@ -108,36 +108,36 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 &#205;ndice de Materias</A>
 </H2><DL COMPACT>
 <DT><STRONG>access link</STRONG>
-<DD><A HREF="node41.html#4619">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4633">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>acciones de desplazamiento</STRONG>
-<DD><A HREF="node38.html#4589">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4603">Construcción de las Tablas</A>
 <DT><STRONG>acciones shift</STRONG>
-<DD><A HREF="node38.html#4591">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4605">Construcción de las Tablas</A>
 <DT><STRONG>acción de reducción</STRONG>
-<DD><A HREF="node38.html#4593">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4607">Construcción de las Tablas</A>
 <DT><STRONG>algoritmo de construcción del subconjunto</STRONG>
-<DD><A HREF="node38.html#4571">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4585">Construcción de las Tablas</A>
 <DT><STRONG>antiderivación</STRONG>
-<DD><A HREF="node37.html#4543">Conceptos Básicos del Análisis</A>
+<DD><A HREF="node37.html#4557">Conceptos Básicos del Análisis</A>
 <DT><STRONG>atributo heredado</STRONG>
-<DD><A HREF="node45.html#5794">Esquemas de Traducción</A>
- | <A HREF="node47.html#5812">Definición Dirigida por la</A>
+<DD><A HREF="node45.html#5808">Esquemas de Traducción</A>
+ | <A HREF="node47.html#5826">Definición Dirigida por la</A>
 <DT><STRONG>atributo sintetizado</STRONG>
-<DD><A HREF="node45.html#5796">Esquemas de Traducción</A>
- | <A HREF="node47.html#5814">Definición Dirigida por la</A>
+<DD><A HREF="node45.html#5810">Esquemas de Traducción</A>
+ | <A HREF="node47.html#5828">Definición Dirigida por la</A>
 <DT><STRONG>atributos formales</STRONG>
-<DD><A HREF="node47.html#5802">Definición Dirigida por la</A>
-<DT><STRONG>atributos heredados</STRONG>
-<DD><A HREF="node45.html#5792">Esquemas de Traducción</A>
- | <A HREF="node46.html#5798">Manejo en <TT>jison</TT> de</A>
- | <A HREF="node47.html#5810">Definición Dirigida por la</A>
-<DT><STRONG>atributos intrínsecos</STRONG>
 <DD><A HREF="node47.html#5816">Definición Dirigida por la</A>
+<DT><STRONG>atributos heredados</STRONG>
+<DD><A HREF="node45.html#5806">Esquemas de Traducción</A>
+ | <A HREF="node46.html#5812">Manejo en <TT>jison</TT> de</A>
+ | <A HREF="node47.html#5824">Definición Dirigida por la</A>
+<DT><STRONG>atributos intrínsecos</STRONG>
+<DD><A HREF="node47.html#5830">Definición Dirigida por la</A>
 <DT><STRONG>atributos sintetizados</STRONG>
-<DD><A HREF="node45.html#5790">Esquemas de Traducción</A>
- | <A HREF="node47.html#5808">Definición Dirigida por la</A>
+<DD><A HREF="node45.html#5804">Esquemas de Traducción</A>
+ | <A HREF="node47.html#5822">Definición Dirigida por la</A>
 <DT><STRONG>autómata finito determinista</STRONG>
-<DD><A HREF="node38.html#4567">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4581">Construcción de las Tablas</A>
 <DT><STRONG>bubble phase</STRONG>
 <DD><A HREF="node16.html#2573">Ficheros</A>
 <DT><STRONG>callback</STRONG>
@@ -145,49 +145,49 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>capture phase</STRONG>
 <DD><A HREF="node16.html#2569">Ficheros</A>
 <DT><STRONG>clausura</STRONG>
-<DD><A HREF="node38.html#4573">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4587">Construcción de las Tablas</A>
 <DT><STRONG>conflicto de desplazamiento-reducción</STRONG>
-<DD><A HREF="node38.html#4601">Construcción de las Tablas</A>
- | <A HREF="node44.html#5774">Precedencia y Asociatividad</A>
+<DD><A HREF="node38.html#4615">Construcción de las Tablas</A>
+ | <A HREF="node44.html#5788">Precedencia y Asociatividad</A>
 <DT><STRONG>conflicto reduce-reduce</STRONG>
-<DD><A HREF="node38.html#4603">Construcción de las Tablas</A>
- | <A HREF="node44.html#5776">Precedencia y Asociatividad</A>
+<DD><A HREF="node38.html#4617">Construcción de las Tablas</A>
+ | <A HREF="node44.html#5790">Precedencia y Asociatividad</A>
 <DT><STRONG>conflicto shift-reduce</STRONG>
-<DD><A HREF="node38.html#4599">Construcción de las Tablas</A>
- | <A HREF="node44.html#5772">Precedencia y Asociatividad</A>
+<DD><A HREF="node38.html#4613">Construcción de las Tablas</A>
+ | <A HREF="node44.html#5786">Precedencia y Asociatividad</A>
 <DT><STRONG>definición dirigida por la sintáxis</STRONG>
-<DD><A HREF="node47.html#5800">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5814">Definición Dirigida por la</A>
 <DT><STRONG>devDependencies</STRONG>
-<DD><A HREF="node65.html#6572">Grunt</A>
+<DD><A HREF="node65.html#6586">Grunt</A>
 <DT><STRONG>DFA</STRONG>
-<DD><A HREF="node38.html#4569">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4583">Construcción de las Tablas</A>
 <DT><STRONG>DOM storage</STRONG>
 <DD><A HREF="node10.html#2483">Local Storage (HTML5 Web</A>
 <DT><STRONG>esquema de traducción</STRONG>
-<DD><A HREF="node45.html#5788">Esquemas de Traducción</A>
+<DD><A HREF="node45.html#5802">Esquemas de Traducción</A>
 <DT><STRONG>evaluation stack</STRONG>
-<DD><A HREF="node41.html#4629">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4643">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>favicon</STRONG>
 <DD><A HREF="node11.html#2513">favicons y shortcut icons</A>
 <DT><STRONG>Favorite icon</STRONG>
 <DD><A HREF="node11.html#2515">favicons y shortcut icons</A>
 <DT><STRONG>función de transición del autómata</STRONG>
-<DD><A HREF="node38.html#4575">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4589">Construcción de las Tablas</A>
 <DT><STRONG>goto</STRONG>
-<DD><A HREF="node38.html#4583">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4597">Construcción de las Tablas</A>
 <DT><STRONG>grafo de dependencias</STRONG>
-<DD><A HREF="node47.html#5818">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5832">Definición Dirigida por la</A>
 <DT><STRONG>gramática atribuída</STRONG>
-<DD><A HREF="node47.html#5824">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5838">Definición Dirigida por la</A>
 <DT><STRONG>gramática es recursiva por la izquierda</STRONG>
-<DD><A HREF="node23.html#3530">Asociación Incorrecta para la</A>
+<DD><A HREF="node23.html#3538">Asociación Incorrecta para la</A>
 <DT><STRONG>handle</STRONG>
-<DD><A HREF="node37.html#4557">Conceptos Básicos del Análisis</A>
- | <A HREF="node37.html#4549">Conceptos Básicos del Análisis</A>
+<DD><A HREF="node37.html#4571">Conceptos Básicos del Análisis</A>
+ | <A HREF="node37.html#4563">Conceptos Básicos del Análisis</A>
 <DT><STRONG>INI</STRONG>
 <DD><A HREF="node14.html#2551">Ejercicios</A>
 <DT><STRONG>items núcleo</STRONG>
-<DD><A HREF="node38.html#4609">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4623">Construcción de las Tablas</A>
 <DT><STRONG>JavaScript Object Notation</STRONG>
 <DD><A HREF="node10.html#2465">Templates en Underscore</A>
 <DT><STRONG>jQuery</STRONG>
@@ -195,46 +195,50 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>JSON</STRONG>
 <DD><A HREF="node10.html#2463">Templates en Underscore</A>
 <DT><STRONG>Karma</STRONG>
-<DD><A HREF="node65.html#6562">Karma</A>
+<DD><A HREF="node65.html#6576">Karma</A>
 <DT><STRONG>L-atribuída</STRONG>
-<DD><A HREF="node47.html#5826">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5840">Definición Dirigida por la</A>
 <DT><STRONG>LALR</STRONG>
-<DD><A HREF="node38.html#4607">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4621">Construcción de las Tablas</A>
 <DT><STRONG>lenguaje de las formas sentenciales a rderechas</STRONG>
-<DD><A HREF="node37.html#4547">Conceptos Básicos del Análisis</A>
+<DD><A HREF="node37.html#4561">Conceptos Básicos del Análisis</A>
 <DT><STRONG>local storage</STRONG>
 <DD><A HREF="node10.html#2485">Local Storage (HTML5 Web</A>
 <DT><STRONG>LR</STRONG>
-<DD><A HREF="node37.html#4541">Conceptos Básicos del Análisis</A>
-<DT><STRONG>manecilla</STRONG>
-<DD><A HREF="node37.html#4553">Conceptos Básicos del Análisis</A>
-<DT><STRONG>mango</STRONG>
 <DD><A HREF="node37.html#4555">Conceptos Básicos del Análisis</A>
- | <A HREF="node37.html#4551">Conceptos Básicos del Análisis</A>
+<DT><STRONG>manecilla</STRONG>
+<DD><A HREF="node37.html#4567">Conceptos Básicos del Análisis</A>
+<DT><STRONG>mango</STRONG>
+<DD><A HREF="node37.html#4569">Conceptos Básicos del Análisis</A>
+ | <A HREF="node37.html#4565">Conceptos Básicos del Análisis</A>
 <DT><STRONG>Mocha TDD interface</STRONG>
-<DD><A HREF="node65.html#6556">TDD</A>
+<DD><A HREF="node65.html#6570">TDD</A>
 <DT><STRONG>NFA</STRONG>
-<DD><A HREF="node37.html#4561">Conceptos Básicos del Análisis</A>
+<DD><A HREF="node37.html#4575">Conceptos Básicos del Análisis</A>
 <DT><STRONG>orden parcial</STRONG>
-<DD><A HREF="node47.html#5820">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5834">Definición Dirigida por la</A>
 <DT><STRONG>orden topológico</STRONG>
-<DD><A HREF="node47.html#5822">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5836">Definición Dirigida por la</A>
+<DT><STRONG>parsing expression grammar</STRONG>
+<DD><A HREF="node22.html#3512">Instroducción</A>
 <DT><STRONG>pattern matching</STRONG>
 <DD><A HREF="node10.html#2495">global.css</A>
+<DT><STRONG>PEG</STRONG>
+<DD><A HREF="node22.html#3514">Instroducción</A>
 <DT><STRONG>Primeros</STRONG>
-<DD><A HREF="node38.html#4563">Los conjuntos de Primeros</A>
+<DD><A HREF="node38.html#4577">Los conjuntos de Primeros</A>
 <DT><STRONG>Práctica</STRONG>
 <DD><DL COMPACT>
 <DT><STRONG>Ambiguedad en C++</STRONG>
-<DD><A HREF="node31.html#3565">Práctica: Ambiguedad en C++</A>
+<DD><A HREF="node31.html#3573">Práctica: Ambiguedad en C++</A>
 <DT><STRONG>Analizador Léxico para Un Subconjunto de JavaScript</STRONG>
 <DD><A HREF="node17.html#2603">Práctica: Analizador Léxico para</A>
 <DT><STRONG>Calculadora  con Funciones</STRONG>
-<DD><A HREF="node40.html#4614">Práctica: Calculadora con Funciones</A>
+<DD><A HREF="node40.html#4628">Práctica: Calculadora con Funciones</A>
 <DT><STRONG>Calculadora con Análisis de Ámbito</STRONG>
-<DD><A HREF="node41.html#4616">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4630">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>Calculadora con Listas de Expresiones y Variables</STRONG>
-<DD><A HREF="node36.html#4540">Práctica: Calculadora con Listas</A>
+<DD><A HREF="node36.html#4554">Práctica: Calculadora con Listas</A>
 <DT><STRONG>Comma Separated Values. CSV</STRONG>
 <DD><A HREF="node10.html#2411">Práctica: Comma Separated Values.</A>
 <DT><STRONG>Conversor de Temperaturas</STRONG>
@@ -242,56 +246,56 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>Ficheros INI</STRONG>
 <DD><A HREF="node16.html#2556">Práctica: Ficheros INI</A>
 <DT><STRONG>Inventando un Lenguaje: Tortoise</STRONG>
-<DD><A HREF="node32.html#3567">Práctica: Inventando un Lenguaje:</A>
+<DD><A HREF="node32.html#3575">Práctica: Inventando un Lenguaje:</A>
 <DT><STRONG>Palabras Repetidas</STRONG>
 <DD><A HREF="node13.html#2522">Práctica: Palabras Repetidas</A>
 <DT><STRONG>Secuencia de Asignaciones Simples</STRONG>
-<DD><A HREF="node35.html#4506">Práctica: Secuencia de Asignaciones</A>
+<DD><A HREF="node35.html#4520">Práctica: Secuencia de Asignaciones</A>
 <DT><STRONG>Traducción de Infijo a Postfijo</STRONG>
-<DD><A HREF="node39.html#4612">Práctica: Traducción de Infijo</A>
+<DD><A HREF="node39.html#4626">Práctica: Traducción de Infijo</A>
 </DL>
 <DT><STRONG>recursion</STRONG>
-<DD><A HREF="node41.html#4625">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4639">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>recursiva por la derecha</STRONG>
-<DD><A HREF="node25.html#3534">Eliminación de la Recursión</A>
+<DD><A HREF="node25.html#3542">Eliminación de la Recursión</A>
 <DT><STRONG>recursiva por la izquierda</STRONG>
-<DD><A HREF="node23.html#3532">Asociación Incorrecta para la</A>
+<DD><A HREF="node23.html#3540">Asociación Incorrecta para la</A>
 <DT><STRONG>reducción por defecto</STRONG>
-<DD><A HREF="node43.html#5770">defaultActions</A>
+<DD><A HREF="node43.html#5784">defaultActions</A>
 <DT><STRONG>reducción-reducción</STRONG>
-<DD><A HREF="node38.html#4605">Construcción de las Tablas</A>
- | <A HREF="node44.html#5778">Precedencia y Asociatividad</A>
+<DD><A HREF="node38.html#4619">Construcción de las Tablas</A>
+ | <A HREF="node44.html#5792">Precedencia y Asociatividad</A>
 <DT><STRONG>reentrant</STRONG>
-<DD><A HREF="node41.html#4623">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4637">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>register spilling</STRONG>
-<DD><A HREF="node41.html#4627">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4641">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>reglas de evaluación de los atributos</STRONG>
-<DD><A HREF="node47.html#5804">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5818">Definición Dirigida por la</A>
 <DT><STRONG>reglas semánticas</STRONG>
-<DD><A HREF="node47.html#5806">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5820">Definición Dirigida por la</A>
 <DT><STRONG>rightmost derivation</STRONG>
-<DD><A HREF="node37.html#4545">Conceptos Básicos del Análisis</A>
+<DD><A HREF="node37.html#4559">Conceptos Básicos del Análisis</A>
 <DT><STRONG>S-atribuída</STRONG>
-<DD><A HREF="node47.html#5828">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5842">Definición Dirigida por la</A>
 <DT><STRONG>session storage</STRONG>
 <DD><A HREF="node10.html#2487">Local Storage (HTML5 Web</A>
 <DT><STRONG>shortcut</STRONG>
 <DD><A HREF="node11.html#2517">favicons y shortcut icons</A>
 <DT><STRONG>siguientes</STRONG>
-<DD><A HREF="node38.html#4565">Los conjuntos de Primeros</A>
+<DD><A HREF="node38.html#4579">Los conjuntos de Primeros</A>
 <DT><STRONG>SLR</STRONG>
-<DD><A HREF="node38.html#4595">Construcción de las Tablas</A>
- | <A HREF="node38.html#4597">Construcción de las Tablas</A>
- | <A HREF="node38.html#4585">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4609">Construcción de las Tablas</A>
+ | <A HREF="node38.html#4611">Construcción de las Tablas</A>
+ | <A HREF="node38.html#4599">Construcción de las Tablas</A>
 <DT><STRONG>static link</STRONG>
-<DD><A HREF="node41.html#4621">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4635">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>tabla de acciones</STRONG>
-<DD><A HREF="node38.html#4581">Construcción de las Tablas</A>
- | <A HREF="node38.html#4587">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4595">Construcción de las Tablas</A>
+ | <A HREF="node38.html#4601">Construcción de las Tablas</A>
 <DT><STRONG>tabla de gotos</STRONG>
-<DD><A HREF="node38.html#4579">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4593">Construcción de las Tablas</A>
 <DT><STRONG>tabla de saltos</STRONG>
-<DD><A HREF="node38.html#4577">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4591">Construcción de las Tablas</A>
 <DT><STRONG>target phase</STRONG>
 <DD><A HREF="node16.html#2571">Ficheros</A>
 <DT><STRONG>text area</STRONG>
@@ -299,7 +303,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>Web storage</STRONG>
 <DD><A HREF="node10.html#2481">Local Storage (HTML5 Web</A>
 <DT><STRONG>árbol sintáctico concreto</STRONG>
-<DD><A HREF="node34.html#4479">Conceptos Básicos para el</A>
+<DD><A HREF="node34.html#4493">Conceptos Básicos para el</A>
 
 </DL>
 
