--- a/node21.html
+++ b/node21.html
@@ -93,7 +93,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html994"
-  HREF="node22.html">Instroducción</A>
+  HREF="node22.html">Introducción</A>
 <B>Sup:</B> <A NAME="tex2html988"
   HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
 <B> Ant:</B> <A NAME="tex2html982"
@@ -119,7 +119,7 @@ Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 
 <UL CLASS="ChildLinks">
 <LI><A NAME="tex2html995"
-  HREF="node22.html">Instroducción</A>
+  HREF="node22.html">Introducción</A>
 <UL>
 <LI><A NAME="tex2html996"
   HREF="node22.html#SECTION04311000000000000000">Referencias y Documentación</A>
@@ -269,7 +269,7 @@ Ejecución de las Acciones Semánticas</A>
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html994"
-  HREF="node22.html">Instroducción</A>
+  HREF="node22.html">Introducción</A>
 <B>Sup:</B> <A NAME="tex2html988"
   HREF="node6.html">PRIMERA PARTE: APUNTES DE</A>
 <B> Ant:</B> <A NAME="tex2html982"
