--- a/node23.html
+++ b/node23.html
@@ -97,7 +97,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B>Sup:</B> <A NAME="tex2html1048"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1042"
-  HREF="node22.html">Instroducción</A>
+  HREF="node22.html">Introducción</A>
 <B> Con:</B> 
 <A NAME="tex2html1049"
   HREF="node82.html">
@@ -402,7 +402,7 @@ console.log(r);
 <B>Sup:</B> <A NAME="tex2html1048"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1042"
-  HREF="node22.html">Instroducción</A>
+  HREF="node22.html">Introducción</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
