--- a/node6.html
+++ b/node6.html
@@ -162,7 +162,7 @@ PRIMERA PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
   HREF="node21.html">Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <UL>
 <LI><A NAME="tex2html620"
-  HREF="node22.html">Instroducción</A>
+  HREF="node22.html">Introducción</A>
 <UL>
 <LI><A NAME="tex2html621"
   HREF="node22.html#SECTION04311000000000000000">Referencias y Documentación</A>
