--- a/node82.html
+++ b/node82.html
@@ -157,7 +157,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   HREF="node21.html">Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <UL>
 <LI><A NAME="tex2html2149"
-  HREF="node22.html">Instroducción</A>
+  HREF="node22.html">Introducción</A>
 <UL>
 <LI><A NAME="tex2html2150"
   HREF="node22.html#SECTION04311000000000000000">Referencias y Documentación</A>
