--- a/node85.html
+++ b/node85.html
@@ -220,11 +220,11 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>orden topológico</STRONG>
 <DD><A HREF="node47.html#5850">Definición Dirigida por la</A>
 <DT><STRONG>parsing expression grammar</STRONG>
-<DD><A HREF="node22.html#3514">Instroducción</A>
+<DD><A HREF="node22.html#3514">Introducción</A>
 <DT><STRONG>pattern matching</STRONG>
 <DD><A HREF="node10.html#2495">global.css</A>
 <DT><STRONG>PEG</STRONG>
-<DD><A HREF="node22.html#3516">Instroducción</A>
+<DD><A HREF="node22.html#3516">Introducción</A>
 <DT><STRONG>Primeros</STRONG>
 <DD><A HREF="node38.html#4591">Los conjuntos de Primeros</A>
 <DT><STRONG>Práctica</STRONG>
