--- a/node1.html
+++ b/node1.html
@@ -164,7 +164,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   HREF="node21.html">Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <UL>
 <LI><A NAME="tex2html432"
-  HREF="node22.html">Instroducción</A>
+  HREF="node22.html">Introducción</A>
 <UL>
 <LI><A NAME="tex2html433"
   HREF="node22.html#SECTION04311000000000000000">Referencias y Documentación</A>
