--- a/node22.html
+++ b/node22.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1038"
+<A NAME="tex2html1046"
   HREF="node23.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1032"
+<A NAME="tex2html1040"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1026"
+<A NAME="tex2html1034"
   HREF="node21.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1034"
+<A NAME="tex2html1042"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1036"
+<A NAME="tex2html1044"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -92,18 +92,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1039"
+<B> Sig:</B> <A NAME="tex2html1047"
   HREF="node23.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1033"
+<B>Sup:</B> <A NAME="tex2html1041"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1027"
+<B> Ant:</B> <A NAME="tex2html1035"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 <B> Con:</B> 
-<A NAME="tex2html1034"
+<A NAME="tex2html1042"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1036"
+<A NAME="tex2html1044"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -113,8 +113,12 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <A NAME="CHILD_LINKS"><STRONG>Subsecciones</STRONG></A>
 
 <UL CLASS="ChildLinks">
-<LI><A NAME="tex2html1040"
-  HREF="node22.html#SECTION04311000000000000000">Referencias y Documentación</A>
+<LI><A NAME="tex2html1048"
+  HREF="node22.html#SECTION04311000000000000000">Syntax</A>
+<LI><A NAME="tex2html1049"
+  HREF="node22.html#SECTION04312000000000000000">Semantics</A>
+<LI><A NAME="tex2html1050"
+  HREF="node22.html#SECTION04313000000000000000">Referencias y Documentación</A>
 </UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -124,7 +128,7 @@ Introducción</A>
 </H1>
 
 <P>
-In computer science, a <A NAME="3521"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3523"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
+In computer science, a <A NAME="3527"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3529"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
 analytic formal grammar, i.e. it describes a formal language in terms
 of a set of rules for recognizing strings in the language.
 
@@ -156,6 +160,10 @@ languages that cannot be parsed by a PEG, but this is
 not yet proven. 
 
 <P>
+
+<H2><A NAME="SECTION04311000000000000000">
+Syntax</A>
+</H2>
 Formally, a parsing expression grammar consists of:
 
 <UL>
@@ -202,7 +210,7 @@ where <SPAN CLASS="MATH"><IMG
  ALT="$ A$"></SPAN> is a nonterminal symbol and <SPAN CLASS="MATH"><IMG
  WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img7.png"
- ALT="$ e$"></SPAN> is a <A NAME="3525"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
+ ALT="$ e$"></SPAN> is a <A NAME="3531"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
 
 <P>
 A parsing expression is a hierarchical expression similar to a regular expression, which is
@@ -278,7 +286,38 @@ expression can be constructed using the following operators:
 
 <P>
 
-<H2><A NAME="SECTION04311000000000000000">
+<H2><A NAME="SECTION04312000000000000000">
+Semantics</A>
+</H2>
+
+<P>
+The fundamental difference between context-free grammars and parsing
+expression grammars is that the PEG's choice operator is red ordered:
+
+<P>
+
+<OL>
+<LI>If
+the first alternative succeeds, the second alternative is
+ignored. 
+</LI>
+<LI>Thus ordered choice is not commutative, unlike unordered choice as in context-free grammars.
+</LI>
+<LI>The consequence is that if a CFG is transliterated directly to a PEG,
+any ambiguity in the former is resolved by deterministically picking
+one parse tree from the possible parses. 
+</LI>
+<LI>By carefully
+choosing the order in which the grammar alternatives are specified, a programmer has a great deal of control over which parse tree is selected.
+</LI>
+<LI>PEGs can "look ahead" into the
+input string without actually consuming it
+</LI>
+</OL>
+
+<P>
+
+<H2><A NAME="SECTION04313000000000000000">
 Referencias y Documentación</A>
 </H2>
 
@@ -315,19 +354,19 @@ Véanse [<A
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1038"
+<A NAME="tex2html1046"
   HREF="node23.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1032"
+<A NAME="tex2html1040"
   HREF="node21.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1026"
+<A NAME="tex2html1034"
   HREF="node21.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1034"
+<A NAME="tex2html1042"
   HREF="node82.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1036"
+<A NAME="tex2html1044"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -379,11 +418,11 @@ Véanse [<A
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1039"
+<B> Sig:</B> <A NAME="tex2html1047"
   HREF="node23.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1033"
+<B>Sup:</B> <A NAME="tex2html1041"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1027"
+<B> Ant:</B> <A NAME="tex2html1035"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 </DIV>
 <!--End of Navigation Panel-->
