--- a/node82.html
+++ b/node82.html
@@ -28,16 +28,16 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html2128"
+<A NAME="tex2html2138"
   HREF="node83.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2124"
+<A NAME="tex2html2134"
   HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2118"
+<A NAME="tex2html2128"
   HREF="node81.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A>  
-<A NAME="tex2html2126"
+<A NAME="tex2html2136"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -89,14 +89,14 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2129"
+<B> Sig:</B> <A NAME="tex2html2139"
   HREF="node83.html">&#205;ndice de Figuras</A>
-<B>Sup:</B> <A NAME="tex2html2125"
+<B>Sup:</B> <A NAME="tex2html2135"
   HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
-<B> Ant:</B> <A NAME="tex2html2119"
+<B> Ant:</B> <A NAME="tex2html2129"
   HREF="node81.html">Proyecto: Diseña e Implementa</A>
 <B> Ind:</B> 
-<A NAME="tex2html2126"
+<A NAME="tex2html2136"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -110,321 +110,325 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <!--Table of Contents-->
 
 <UL CLASS="TofC">
-<LI><A NAME="tex2html2130"
+<LI><A NAME="tex2html2140"
   HREF="node2.html">&#205;ndice de Figuras</A>
-<LI><A NAME="tex2html2131"
+<LI><A NAME="tex2html2141"
   HREF="node3.html">&#205;ndice de Tablas</A>
-<LI><A NAME="tex2html2132"
+<LI><A NAME="tex2html2142"
   HREF="node6.html">PRIMERA PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
 <UL>
-<LI><A NAME="tex2html2133"
+<LI><A NAME="tex2html2143"
   HREF="node7.html">Expresiones Regulares y Análisis Léxico en JavaScript</A>
 <UL>
-<LI><A NAME="tex2html2134"
+<LI><A NAME="tex2html2144"
   HREF="node8.html">Mozilla Developer Network: Documentación</A>
-<LI><A NAME="tex2html2135"
+<LI><A NAME="tex2html2145"
   HREF="node9.html">Práctica: Conversor de Temperaturas</A>
-<LI><A NAME="tex2html2136"
+<LI><A NAME="tex2html2146"
   HREF="node10.html">Práctica: Comma Separated Values. CSV</A>
-<LI><A NAME="tex2html2137"
+<LI><A NAME="tex2html2147"
   HREF="node11.html">Comentarios y Consejos</A>
-<LI><A NAME="tex2html2138"
+<LI><A NAME="tex2html2148"
   HREF="node12.html">Ejercicios</A>
-<LI><A NAME="tex2html2139"
+<LI><A NAME="tex2html2149"
   HREF="node13.html">Práctica: Palabras Repetidas</A>
-<LI><A NAME="tex2html2140"
+<LI><A NAME="tex2html2150"
   HREF="node14.html">Ejercicios</A>
-<LI><A NAME="tex2html2141"
+<LI><A NAME="tex2html2151"
   HREF="node15.html">Ejercicios</A>
-<LI><A NAME="tex2html2142"
+<LI><A NAME="tex2html2152"
   HREF="node16.html">Práctica: Ficheros INI</A>
-<LI><A NAME="tex2html2143"
+<LI><A NAME="tex2html2153"
   HREF="node17.html">Práctica: Analizador Léxico para Un Subconjunto de JavaScript</A>
 </UL>
-<LI><A NAME="tex2html2144"
+<LI><A NAME="tex2html2154"
   HREF="node18.html">Análisis Sintáctico Mediante Precedencia de Operadores en JavaScript</A>
 <UL>
-<LI><A NAME="tex2html2145"
+<LI><A NAME="tex2html2155"
   HREF="node19.html">Ejemplo Simple de Intérprete: Una Calculadora</A>
-<LI><A NAME="tex2html2146"
+<LI><A NAME="tex2html2156"
   HREF="node20.html">Análisis Top Down Usando Precedencia de Operadores</A>
 <UL>
-<LI><A NAME="tex2html2147"
+<LI><A NAME="tex2html2157"
   HREF="node20.html#SECTION04221000000000000000">Gramática de JavaScript</A>
 </UL>
 </UL>
-<LI><A NAME="tex2html2148"
+<LI><A NAME="tex2html2158"
   HREF="node21.html">Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <UL>
-<LI><A NAME="tex2html2149"
+<LI><A NAME="tex2html2159"
   HREF="node22.html">Introducción</A>
 <UL>
-<LI><A NAME="tex2html2150"
-  HREF="node22.html#SECTION04311000000000000000">Referencias y Documentación</A>
+<LI><A NAME="tex2html2160"
+  HREF="node22.html#SECTION04311000000000000000">Syntax</A>
+<LI><A NAME="tex2html2161"
+  HREF="node22.html#SECTION04312000000000000000">Semantics</A>
+<LI><A NAME="tex2html2162"
+  HREF="node22.html#SECTION04313000000000000000">Referencias y Documentación</A>
 </UL>
-<LI><A NAME="tex2html2151"
+<LI><A NAME="tex2html2163"
   HREF="node23.html">Un Ejemplo Sencillo</A>
 <UL>
-<LI><A NAME="tex2html2152"
+<LI><A NAME="tex2html2164"
   HREF="node23.html#SECTION04321000000000000000">Asociación Incorrecta para la Resta y la División</A>
 </UL>
-<LI><A NAME="tex2html2153"
+<LI><A NAME="tex2html2165"
   HREF="node24.html">Eliminación de la Recursividad por la Izquierda</A>
 <UL>
-<LI><A NAME="tex2html2154"
+<LI><A NAME="tex2html2166"
   HREF="node24.html#SECTION04331000000000000000">Eliminación de la Recursividad por la izquierda Respetando el Orden de Ejecución de las Acciones Semánticas</A>
-<LI><A NAME="tex2html2155"
+<LI><A NAME="tex2html2167"
   HREF="node24.html#SECTION04332000000000000000">Eliminando la Recursividad por la Izquierda en la Calculadora</A>
 </UL>
-<LI><A NAME="tex2html2156"
+<LI><A NAME="tex2html2168"
   HREF="node25.html">Eliminación de la Recursividad por la Izquierda y Atributos Heredados</A>
 <UL>
-<LI><A NAME="tex2html2157"
+<LI><A NAME="tex2html2169"
   HREF="node25.html#SECTION04341000000000000000">Eliminación de la Recursión por la Izquierda en la Gramática</A>
-<LI><A NAME="tex2html2158"
+<LI><A NAME="tex2html2170"
   HREF="node25.html#SECTION04342000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
-<LI><A NAME="tex2html2159"
+<LI><A NAME="tex2html2171"
   HREF="node25.html#SECTION04343000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 </UL>
-<LI><A NAME="tex2html2160"
+<LI><A NAME="tex2html2172"
   HREF="node26.html">Asociando un else con su if mas cercano</A>
-<LI><A NAME="tex2html2161"
+<LI><A NAME="tex2html2173"
   HREF="node27.html">Comentarios Anidados</A>
-<LI><A NAME="tex2html2162"
+<LI><A NAME="tex2html2174"
   HREF="node28.html">Un Lenguaje Dependiente del Contexto</A>
-<LI><A NAME="tex2html2163"
+<LI><A NAME="tex2html2175"
   HREF="node29.html">PegJS en los Browser</A>
-<LI><A NAME="tex2html2164"
+<LI><A NAME="tex2html2176"
   HREF="node30.html">Usando Pegjs con CoffeeScript</A>
-<LI><A NAME="tex2html2165"
+<LI><A NAME="tex2html2177"
   HREF="node31.html">Práctica: Ambiguedad en C++</A>
-<LI><A NAME="tex2html2166"
+<LI><A NAME="tex2html2178"
   HREF="node32.html">Práctica: Inventando un Lenguaje: Tortoise</A>
 </UL>
-<LI><A NAME="tex2html2167"
+<LI><A NAME="tex2html2179"
   HREF="node33.html">Análisis Sintáctico Ascendente en JavaScript</A>
 <UL>
-<LI><A NAME="tex2html2168"
+<LI><A NAME="tex2html2180"
   HREF="node34.html">Conceptos Básicos para el Análisis Sintáctico</A>
 <UL>
-<LI><A NAME="tex2html2169"
+<LI><A NAME="tex2html2181"
   HREF="node34.html#SECTION04411000000000000000">Ejercicio</A>
 </UL>
-<LI><A NAME="tex2html2170"
+<LI><A NAME="tex2html2182"
   HREF="node35.html">Ejemplo Simple en Jison</A>
 <UL>
-<LI><A NAME="tex2html2171"
+<LI><A NAME="tex2html2183"
   HREF="node35.html#SECTION04421000000000000000">Véase También</A>
-<LI><A NAME="tex2html2172"
+<LI><A NAME="tex2html2184"
   HREF="node35.html#SECTION04422000000000000000">Práctica: Secuencia de Asignaciones Simples</A>
 </UL>
-<LI><A NAME="tex2html2173"
+<LI><A NAME="tex2html2185"
   HREF="node36.html">Ejemplo en Jison: Calculadora Simple</A>
 <UL>
-<LI><A NAME="tex2html2174"
+<LI><A NAME="tex2html2186"
   HREF="node36.html#SECTION04431000000000000000">Práctica: Calculadora con Listas de Expresiones y Variables</A>
 </UL>
-<LI><A NAME="tex2html2175"
+<LI><A NAME="tex2html2187"
   HREF="node37.html">Conceptos Básicos del Análisis LR</A>
-<LI><A NAME="tex2html2176"
+<LI><A NAME="tex2html2188"
   HREF="node38.html">Construcción de las Tablas para el Análisis SLR</A>
 <UL>
-<LI><A NAME="tex2html2177"
+<LI><A NAME="tex2html2189"
   HREF="node38.html#SECTION04451000000000000000">Los conjuntos de Primeros y Siguientes</A>
-<LI><A NAME="tex2html2178"
+<LI><A NAME="tex2html2190"
   HREF="node38.html#SECTION04452000000000000000">Construcción de las Tablas</A>
 </UL>
-<LI><A NAME="tex2html2179"
+<LI><A NAME="tex2html2191"
   HREF="node39.html">Práctica: Traducción de Infijo a Postfijo</A>
-<LI><A NAME="tex2html2180"
+<LI><A NAME="tex2html2192"
   HREF="node40.html">Práctica: Calculadora con Funciones</A>
-<LI><A NAME="tex2html2181"
+<LI><A NAME="tex2html2193"
   HREF="node41.html">Práctica: Calculadora con Análisis de Ámbito</A>
-<LI><A NAME="tex2html2182"
+<LI><A NAME="tex2html2194"
   HREF="node42.html">Algoritmo de Análisis LR</A>
-<LI><A NAME="tex2html2183"
+<LI><A NAME="tex2html2195"
   HREF="node43.html">El módulo Generado por jison</A>
 <UL>
-<LI><A NAME="tex2html2184"
+<LI><A NAME="tex2html2196"
   HREF="node43.html#SECTION044101000000000000000">Version</A>
-<LI><A NAME="tex2html2185"
+<LI><A NAME="tex2html2197"
   HREF="node43.html#SECTION044102000000000000000">Gramática Inicial</A>
-<LI><A NAME="tex2html2186"
+<LI><A NAME="tex2html2198"
   HREF="node43.html#SECTION044103000000000000000">Tablas</A>
-<LI><A NAME="tex2html2187"
+<LI><A NAME="tex2html2199"
   HREF="node43.html#SECTION044104000000000000000">Acciones Semánticas</A>
-<LI><A NAME="tex2html2188"
+<LI><A NAME="tex2html2200"
   HREF="node43.html#SECTION044105000000000000000">Tabla de Acciones y GOTOs</A>
-<LI><A NAME="tex2html2189"
+<LI><A NAME="tex2html2201"
   HREF="node43.html#SECTION044106000000000000000">defaultActions</A>
-<LI><A NAME="tex2html2190"
+<LI><A NAME="tex2html2202"
   HREF="node43.html#SECTION044107000000000000000">Reducciones</A>
-<LI><A NAME="tex2html2191"
+<LI><A NAME="tex2html2203"
   HREF="node43.html#SECTION044108000000000000000">Desplazamientos/Shifts</A>
-<LI><A NAME="tex2html2192"
+<LI><A NAME="tex2html2204"
   HREF="node43.html#SECTION044109000000000000000">Manejo de Errores</A>
-<LI><A NAME="tex2html2193"
+<LI><A NAME="tex2html2205"
   HREF="node43.html#SECTION0441010000000000000000">Analizador Léxico</A>
-<LI><A NAME="tex2html2194"
+<LI><A NAME="tex2html2206"
   HREF="node43.html#SECTION0441011000000000000000">Exportación</A>
 </UL>
-<LI><A NAME="tex2html2195"
+<LI><A NAME="tex2html2207"
   HREF="node44.html">Precedencia y Asociatividad</A>
-<LI><A NAME="tex2html2196"
+<LI><A NAME="tex2html2208"
   HREF="node45.html">Esquemas de Traducción</A>
-<LI><A NAME="tex2html2197"
+<LI><A NAME="tex2html2209"
   HREF="node46.html">Manejo en jison de Atributos Heredados</A>
-<LI><A NAME="tex2html2198"
+<LI><A NAME="tex2html2210"
   HREF="node47.html">Definición Dirigida por la Sintáxis</A>
-<LI><A NAME="tex2html2199"
+<LI><A NAME="tex2html2211"
   HREF="node48.html">Ejercicios: Casos de Estudio</A>
 <UL>
-<LI><A NAME="tex2html2200"
+<LI><A NAME="tex2html2212"
   HREF="node48.html#SECTION044151000000000000000">Un mal diseño</A>
-<LI><A NAME="tex2html2201"
+<LI><A NAME="tex2html2213"
   HREF="node48.html#SECTION044152000000000000000">Gramática no LR(1)</A>
-<LI><A NAME="tex2html2202"
+<LI><A NAME="tex2html2214"
   HREF="node48.html#SECTION044153000000000000000">Un Lenguaje Intrínsecamente Ambiguo</A>
-<LI><A NAME="tex2html2203"
+<LI><A NAME="tex2html2215"
   HREF="node48.html#SECTION044154000000000000000">Conflicto reduce-reduce</A>
 </UL>
-<LI><A NAME="tex2html2204"
+<LI><A NAME="tex2html2216"
   HREF="node49.html">Recuperación de Errores</A>
-<LI><A NAME="tex2html2205"
+<LI><A NAME="tex2html2217"
   HREF="node50.html">Depuración en jison</A>
-<LI><A NAME="tex2html2206"
+<LI><A NAME="tex2html2218"
   HREF="node51.html">Construcción del Árbol Sintáctico</A>
-<LI><A NAME="tex2html2207"
+<LI><A NAME="tex2html2219"
   HREF="node52.html">Consejos a seguir al escribir un programa jison</A>
 </UL>
-<LI><A NAME="tex2html2208"
+<LI><A NAME="tex2html2220"
   HREF="node53.html">Análisis Sintáctico Ascendente en Ruby</A>
 <UL>
-<LI><A NAME="tex2html2209"
+<LI><A NAME="tex2html2221"
   HREF="node54.html">La Calculadora</A>
 <UL>
-<LI><A NAME="tex2html2210"
+<LI><A NAME="tex2html2222"
   HREF="node54.html#SECTION04511000000000000000">Uso desde Línea de Comandos</A>
-<LI><A NAME="tex2html2211"
+<LI><A NAME="tex2html2223"
   HREF="node54.html#SECTION04512000000000000000">Análisis Léxico con rexical</A>
-<LI><A NAME="tex2html2212"
+<LI><A NAME="tex2html2224"
   HREF="node54.html#SECTION04513000000000000000">Análisis Sintáctico</A>
 </UL>
-<LI><A NAME="tex2html2213"
+<LI><A NAME="tex2html2225"
   HREF="node55.html">Véase También</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html2214"
+<LI><A NAME="tex2html2226"
   HREF="node56.html">PARTE: CREATE YOUR OWN PROGRAMMING LANGUAGE</A>
 <UL>
-<LI><A NAME="tex2html2215"
+<LI><A NAME="tex2html2227"
   HREF="node57.html">JavaScript Review </A>
 <UL>
-<LI><A NAME="tex2html2216"
+<LI><A NAME="tex2html2228"
   HREF="node58.html">Closures</A>
 </UL>
-<LI><A NAME="tex2html2217"
+<LI><A NAME="tex2html2229"
   HREF="node59.html">Your First Compiler </A>
-<LI><A NAME="tex2html2218"
+<LI><A NAME="tex2html2230"
   HREF="node60.html">Parsing</A>
-<LI><A NAME="tex2html2219"
+<LI><A NAME="tex2html2231"
   HREF="node61.html">Scheem Interpreter</A>
 <UL>
-<LI><A NAME="tex2html2220"
+<LI><A NAME="tex2html2232"
   HREF="node62.html">Scheem Interpreter</A>
-<LI><A NAME="tex2html2221"
+<LI><A NAME="tex2html2233"
   HREF="node63.html">Variables</A>
-<LI><A NAME="tex2html2222"
+<LI><A NAME="tex2html2234"
   HREF="node64.html">Setting Values</A>
-<LI><A NAME="tex2html2223"
+<LI><A NAME="tex2html2235"
   HREF="node65.html">Putting Things Together</A>
 <UL>
-<LI><A NAME="tex2html2224"
+<LI><A NAME="tex2html2236"
   HREF="node65.html#SECTION05441000000000000000">Unit Testing: Mocha</A>
-<LI><A NAME="tex2html2225"
+<LI><A NAME="tex2html2237"
   HREF="node65.html#SECTION05442000000000000000">Karma</A>
-<LI><A NAME="tex2html2226"
+<LI><A NAME="tex2html2238"
   HREF="node65.html#SECTION05443000000000000000">Grunt</A>
-<LI><A NAME="tex2html2227"
+<LI><A NAME="tex2html2239"
   HREF="node65.html#SECTION05444000000000000000">GitHub Project Pages</A>
 </UL>
 </UL>
-<LI><A NAME="tex2html2228"
+<LI><A NAME="tex2html2240"
   HREF="node66.html">Functions and all that</A>
-<LI><A NAME="tex2html2229"
+<LI><A NAME="tex2html2241"
   HREF="node67.html">Inventing a language for turtle graphics</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html2230"
+<LI><A NAME="tex2html2242"
   HREF="node68.html">HERRAMIENTAS</A>
 <UL>
-<LI><A NAME="tex2html2231"
+<LI><A NAME="tex2html2243"
   HREF="node69.html">Heroku</A>
 <UL>
-<LI><A NAME="tex2html2232"
+<LI><A NAME="tex2html2244"
   HREF="node70.html">Introducción</A>
-<LI><A NAME="tex2html2233"
+<LI><A NAME="tex2html2245"
   HREF="node71.html">Logging</A>
-<LI><A NAME="tex2html2234"
+<LI><A NAME="tex2html2246"
   HREF="node72.html">Troubleshooting</A>
-<LI><A NAME="tex2html2235"
+<LI><A NAME="tex2html2247"
   HREF="node73.html">Configuration</A>
-<LI><A NAME="tex2html2236"
+<LI><A NAME="tex2html2248"
   HREF="node74.html">Make Heroku run non-master Git branch</A>
-<LI><A NAME="tex2html2237"
+<LI><A NAME="tex2html2249"
   HREF="node75.html">Account Verification and add-ons</A>
-<LI><A NAME="tex2html2238"
+<LI><A NAME="tex2html2250"
   HREF="node76.html">Véase</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html2239"
+<LI><A NAME="tex2html2251"
   HREF="node77.html">PARTE: BITÁCORA DEL CURSO</A>
 <UL>
-<LI><A NAME="tex2html2240"
+<LI><A NAME="tex2html2252"
   HREF="node78.html">2014</A>
 <UL>
-<LI><A NAME="tex2html2241"
+<LI><A NAME="tex2html2253"
   HREF="node79.html">01</A>
 <UL>
-<LI><A NAME="tex2html2242"
+<LI><A NAME="tex2html2254"
   HREF="node79.html#SECTION07111000000000000000">Semana del 27/01/14 al 01/02/2014</A>
 </UL>
-<LI><A NAME="tex2html2243"
+<LI><A NAME="tex2html2255"
   HREF="node80.html">02</A>
 <UL>
-<LI><A NAME="tex2html2244"
+<LI><A NAME="tex2html2256"
   HREF="node80.html#SECTION07121000000000000000">Semana del 4/02/14 al 7/02/2014</A>
-<LI><A NAME="tex2html2245"
+<LI><A NAME="tex2html2257"
   HREF="node80.html#SECTION07122000000000000000">Semana del 24/02/14 al 02/03/14. Repaso para el micro-examen del 05/03/14</A>
 </UL>
-<LI><A NAME="tex2html2246"
+<LI><A NAME="tex2html2258"
   HREF="node81.html">Proyecto: Diseña e Implementa un Lenguaje de Dominio Específico</A>
 </UL>
 </UL>
 <BR>
-<LI><A NAME="tex2html2247"
+<LI><A NAME="tex2html2259"
   HREF="node83.html">&#205;ndice de Figuras</A>
-<LI><A NAME="tex2html2248"
+<LI><A NAME="tex2html2260"
   HREF="node84.html">&#205;ndice de Tablas</A>
-<LI><A NAME="tex2html2249"
+<LI><A NAME="tex2html2261"
   HREF="node85.html">&#205;ndice de Materias</A>
-<LI><A NAME="tex2html2250"
+<LI><A NAME="tex2html2262"
   HREF="node86.html">Bibliograf&#237;a</A>
 </UL>
 <!--End of Table of Contents-->
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html2128"
+<A NAME="tex2html2138"
   HREF="node83.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html2124"
+<A NAME="tex2html2134"
   HREF="javascriptexamples.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html2118"
+<A NAME="tex2html2128"
   HREF="node81.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A>  
-<A NAME="tex2html2126"
+<A NAME="tex2html2136"
   HREF="node85.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/~plgrado/index.html"><IMG
@@ -476,11 +480,11 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="pcgull"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html2129"
+<B> Sig:</B> <A NAME="tex2html2139"
   HREF="node83.html">&#205;ndice de Figuras</A>
-<B>Sup:</B> <A NAME="tex2html2125"
+<B>Sup:</B> <A NAME="tex2html2135"
   HREF="javascriptexamples.html">Apuntes de la Asignatura</A>
-<B> Ant:</B> <A NAME="tex2html2119"
+<B> Ant:</B> <A NAME="tex2html2129"
   HREF="node81.html">Proyecto: Diseña e Implementa</A>
 </DIV>
 <!--End of Navigation Panel-->
