--- a/node22.html
+++ b/node22.html
@@ -128,7 +128,7 @@ Introducción</A>
 </H1>
 
 <P>
-In computer science, a <A NAME="3527"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3529"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
+In computer science, a <A NAME="3529"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3531"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
 analytic formal grammar, i.e. it describes a formal language in terms
 of a set of rules for recognizing strings in the language.
 
@@ -210,7 +210,7 @@ where <SPAN CLASS="MATH"><IMG
  ALT="$ A$"></SPAN> is a nonterminal symbol and <SPAN CLASS="MATH"><IMG
  WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img7.png"
- ALT="$ e$"></SPAN> is a <A NAME="3531"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
+ ALT="$ e$"></SPAN> is a <A NAME="3533"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
 
 <P>
 A parsing expression is a hierarchical expression similar to a regular expression, which is
@@ -310,7 +310,7 @@ one parse tree from the possible parses.
 <LI>By carefully
 choosing the order in which the grammar alternatives are specified, a programmer has a great deal of control over which parse tree is selected.
 </LI>
-<LI>PEGs can "look ahead" into the
+<LI>PEGs can violet look ahead into the
 input string without actually consuming it
 </LI>
 </OL>
