--- a/node22.html
+++ b/node22.html
@@ -128,7 +128,7 @@ Introducción</A>
 </H1>
 
 <P>
-In computer science, a <A NAME="3540"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3542"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
+In computer science, a <A NAME="3542"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3544"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
 analytic formal grammar, i.e. it describes a formal language in terms
 of a set of rules for recognizing strings in the language.
 
@@ -210,7 +210,7 @@ where <SPAN CLASS="MATH"><IMG
  ALT="$ A$"></SPAN> is a nonterminal symbol and <SPAN CLASS="MATH"><IMG
  WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img7.png"
- ALT="$ e$"></SPAN> is a <A NAME="3544"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
+ ALT="$ e$"></SPAN> is a <A NAME="3546"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
 
 <P>
 A parsing expression is a hierarchical expression similar to a regular expression, which is
@@ -329,7 +329,7 @@ and then succeeds if <SPAN CLASS="MATH"><IMG
  WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img7.png"
  ALT="$ e$"></SPAN> fails, 
-but in either case never consumes any input.
+<I>but in either case never consumes any input</I>.
 </LI>
 <LI>The not-predicate expression <SPAN CLASS="MATH"><IMG
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
@@ -341,7 +341,7 @@ but in either case never consumes any input.
 fails and fails if <SPAN CLASS="MATH"><IMG
  WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img7.png"
- ALT="$ e$"></SPAN> succeeds, again consuming no input in either case.
+ ALT="$ e$"></SPAN> succeeds, <I>again consuming no input in either case</I>.
 </LI>
 </OL>
 
