--- a/node22.html
+++ b/node22.html
@@ -312,7 +312,7 @@ one parse tree from the possible parses.
 choosing the order in which the grammar alternatives are specified, a programmer has a great deal of control over which parse tree is selected.
 </LI>
 <LI>PEGs can 
-<FONT COLOR="#ee82ee"> look ahead</FONT> into the
+<FONT COLOR="#ff0000"> look ahead</FONT> into the
 input string without actually consuming it
 </LI>
 <LI>The and-predicate expression <SPAN CLASS="MATH"><IMG
