--- a/node22.html
+++ b/node22.html
@@ -130,7 +130,7 @@ Introducción</A>
 </H1>
 
 <P>
-In computer science, a <A NAME="3543"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3545"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
+In computer science, a <A NAME="3550"></A><SPAN  CLASS="textit">parsing expression grammar</SPAN>, or <A NAME="3552"></A><SPAN  CLASS="textit">PEG</SPAN>, is a type of
 analytic formal grammar, i.e. it describes a formal language in terms
 of a set of rules for recognizing strings in the language.
 
@@ -212,7 +212,7 @@ where <SPAN CLASS="MATH"><IMG
  ALT="$ A$"></SPAN> is a nonterminal symbol and <SPAN CLASS="MATH"><IMG
  WIDTH="13" HEIGHT="18" ALIGN="BOTTOM" BORDER="0"
  SRC="img7.png"
- ALT="$ e$"></SPAN> is a <A NAME="3547"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
+ ALT="$ e$"></SPAN> is a <A NAME="3554"></A><SPAN  CLASS="textit">parsing expression</SPAN>. 
 
 <P>
 A parsing expression is a hierarchical expression similar to a regular expression, which is
@@ -354,24 +354,26 @@ Implementing parsers from parsing expression grammars</A>
 </H2>
 
 <P>
-Any parsing expression grammar can be converted directly into a recursive descent parser. 
+Any parsing expression grammar can be converted directly into a <A NAME="3556"></A><SPAN  CLASS="textit">recursive descent parser</SPAN>. 
 
 <P>
 Due to the unlimited lookahead capability that the grammar formalism
-provides, however, the resulting parser could exhibit exponential time
-performance in the worst case.
+provides, however, the resulting parser 
+<FONT COLOR="#ff0000"> could exhibit exponential time
+performance in the worst case</FONT>.
 
 <P>
 It is possible to obtain better performance for any parsing expression
-grammar by converting its recursive descent parser into a packrat parser,
-which always runs in linear time, at the cost of substantially greater
+grammar by converting its recursive descent parser into 
+<FONT COLOR="#ff0000">va packrat parser,
+which always runs in linear time</FONT>, at the cost of substantially greater
 storage space requirements. 
 
 <P>
-A packrat parser is a form of parser
+<I>A packrat parser is a form of parser
 similar to a recursive descent parser in construction, except that
 during the parsing process it memoizes the intermediate results of all
-invocations of the mutually recursive parsing functions, ensuring that
+invocations of the mutually recursive parsing functions</I>, ensuring that
 each parsing function is only invoked at most once at a given input
 position. 
 
@@ -387,8 +389,8 @@ least as early as 1993.
 
 <P>
 Note that this analysis of the performance
-of a packrat parser assumes that enough memory is available to hold all
-of the memoized results; in practice, if there were not enough memory,
+of a packrat parser <B>assumes that enough memory is available to hold all
+of the memoized results</B>; in practice, if there were not enough memory,
 some parsing functions might have to be invoked more than once at the
 same input position, and consequently the parser could take more than
 linear time.
