--- a/node85.html
+++ b/node85.html
@@ -108,36 +108,36 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 &#205;ndice de Materias</A>
 </H2><DL COMPACT>
 <DT><STRONG>access link</STRONG>
-<DD><A HREF="node41.html#4758">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4775">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>acciones de desplazamiento</STRONG>
-<DD><A HREF="node38.html#4728">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4745">Construcción de las Tablas</A>
 <DT><STRONG>acciones shift</STRONG>
-<DD><A HREF="node38.html#4730">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4747">Construcción de las Tablas</A>
 <DT><STRONG>acción de reducción</STRONG>
-<DD><A HREF="node38.html#4732">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4749">Construcción de las Tablas</A>
 <DT><STRONG>algoritmo de construcción del subconjunto</STRONG>
-<DD><A HREF="node38.html#4710">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4727">Construcción de las Tablas</A>
 <DT><STRONG>antiderivación</STRONG>
-<DD><A HREF="node37.html#4682">Conceptos Básicos del Análisis</A>
+<DD><A HREF="node37.html#4699">Conceptos Básicos del Análisis</A>
 <DT><STRONG>atributo heredado</STRONG>
-<DD><A HREF="node45.html#5933">Esquemas de Traducción</A>
- | <A HREF="node47.html#5951">Definición Dirigida por la</A>
+<DD><A HREF="node45.html#5950">Esquemas de Traducción</A>
+ | <A HREF="node47.html#5968">Definición Dirigida por la</A>
 <DT><STRONG>atributo sintetizado</STRONG>
-<DD><A HREF="node45.html#5935">Esquemas de Traducción</A>
- | <A HREF="node47.html#5953">Definición Dirigida por la</A>
+<DD><A HREF="node45.html#5952">Esquemas de Traducción</A>
+ | <A HREF="node47.html#5970">Definición Dirigida por la</A>
 <DT><STRONG>atributos formales</STRONG>
-<DD><A HREF="node47.html#5941">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5958">Definición Dirigida por la</A>
 <DT><STRONG>atributos heredados</STRONG>
-<DD><A HREF="node45.html#5931">Esquemas de Traducción</A>
- | <A HREF="node46.html#5937">Manejo en <TT>jison</TT> de</A>
- | <A HREF="node47.html#5949">Definición Dirigida por la</A>
+<DD><A HREF="node45.html#5948">Esquemas de Traducción</A>
+ | <A HREF="node46.html#5954">Manejo en <TT>jison</TT> de</A>
+ | <A HREF="node47.html#5966">Definición Dirigida por la</A>
 <DT><STRONG>atributos intrínsecos</STRONG>
-<DD><A HREF="node47.html#5955">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5972">Definición Dirigida por la</A>
 <DT><STRONG>atributos sintetizados</STRONG>
-<DD><A HREF="node45.html#5929">Esquemas de Traducción</A>
- | <A HREF="node47.html#5947">Definición Dirigida por la</A>
+<DD><A HREF="node45.html#5946">Esquemas de Traducción</A>
+ | <A HREF="node47.html#5964">Definición Dirigida por la</A>
 <DT><STRONG>autómata finito determinista</STRONG>
-<DD><A HREF="node38.html#4706">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4723">Construcción de las Tablas</A>
 <DT><STRONG>bubble phase</STRONG>
 <DD><A HREF="node16.html#2584">Ficheros</A>
 <DT><STRONG>callback</STRONG>
@@ -145,49 +145,49 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>capture phase</STRONG>
 <DD><A HREF="node16.html#2580">Ficheros</A>
 <DT><STRONG>clausura</STRONG>
-<DD><A HREF="node38.html#4712">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4729">Construcción de las Tablas</A>
 <DT><STRONG>conflicto de desplazamiento-reducción</STRONG>
-<DD><A HREF="node38.html#4740">Construcción de las Tablas</A>
- | <A HREF="node44.html#5913">Precedencia y Asociatividad</A>
+<DD><A HREF="node38.html#4757">Construcción de las Tablas</A>
+ | <A HREF="node44.html#5930">Precedencia y Asociatividad</A>
 <DT><STRONG>conflicto reduce-reduce</STRONG>
-<DD><A HREF="node38.html#4742">Construcción de las Tablas</A>
- | <A HREF="node44.html#5915">Precedencia y Asociatividad</A>
+<DD><A HREF="node38.html#4759">Construcción de las Tablas</A>
+ | <A HREF="node44.html#5932">Precedencia y Asociatividad</A>
 <DT><STRONG>conflicto shift-reduce</STRONG>
-<DD><A HREF="node38.html#4738">Construcción de las Tablas</A>
- | <A HREF="node44.html#5911">Precedencia y Asociatividad</A>
+<DD><A HREF="node38.html#4755">Construcción de las Tablas</A>
+ | <A HREF="node44.html#5928">Precedencia y Asociatividad</A>
 <DT><STRONG>definición dirigida por la sintáxis</STRONG>
-<DD><A HREF="node47.html#5939">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5956">Definición Dirigida por la</A>
 <DT><STRONG>devDependencies</STRONG>
-<DD><A HREF="node65.html#6711">Grunt</A>
+<DD><A HREF="node65.html#6728">Grunt</A>
 <DT><STRONG>DFA</STRONG>
-<DD><A HREF="node38.html#4708">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4725">Construcción de las Tablas</A>
 <DT><STRONG>DOM storage</STRONG>
 <DD><A HREF="node10.html#2494">Local Storage (HTML5 Web</A>
 <DT><STRONG>esquema de traducción</STRONG>
-<DD><A HREF="node45.html#5927">Esquemas de Traducción</A>
+<DD><A HREF="node45.html#5944">Esquemas de Traducción</A>
 <DT><STRONG>evaluation stack</STRONG>
-<DD><A HREF="node41.html#4768">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4785">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>favicon</STRONG>
 <DD><A HREF="node11.html#2524">favicons y shortcut icons</A>
 <DT><STRONG>Favorite icon</STRONG>
 <DD><A HREF="node11.html#2526">favicons y shortcut icons</A>
 <DT><STRONG>función de transición del autómata</STRONG>
-<DD><A HREF="node38.html#4714">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4731">Construcción de las Tablas</A>
 <DT><STRONG>goto</STRONG>
-<DD><A HREF="node38.html#4722">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4739">Construcción de las Tablas</A>
 <DT><STRONG>grafo de dependencias</STRONG>
-<DD><A HREF="node47.html#5957">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5974">Definición Dirigida por la</A>
 <DT><STRONG>gramática atribuída</STRONG>
-<DD><A HREF="node47.html#5963">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5980">Definición Dirigida por la</A>
 <DT><STRONG>gramática es recursiva por la izquierda</STRONG>
-<DD><A HREF="node23.html#3571">Asociación Incorrecta para la</A>
+<DD><A HREF="node23.html#3580">Asociación Incorrecta para la</A>
 <DT><STRONG>handle</STRONG>
-<DD><A HREF="node37.html#4696">Conceptos Básicos del Análisis</A>
- | <A HREF="node37.html#4688">Conceptos Básicos del Análisis</A>
+<DD><A HREF="node37.html#4713">Conceptos Básicos del Análisis</A>
+ | <A HREF="node37.html#4705">Conceptos Básicos del Análisis</A>
 <DT><STRONG>INI</STRONG>
 <DD><A HREF="node14.html#2562">Ejercicios</A>
 <DT><STRONG>items núcleo</STRONG>
-<DD><A HREF="node38.html#4748">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4765">Construcción de las Tablas</A>
 <DT><STRONG>JavaScript Object Notation</STRONG>
 <DD><A HREF="node10.html#2476">Templates en Underscore</A>
 <DT><STRONG>jQuery</STRONG>
@@ -195,52 +195,52 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>JSON</STRONG>
 <DD><A HREF="node10.html#2474">Templates en Underscore</A>
 <DT><STRONG>Karma</STRONG>
-<DD><A HREF="node65.html#6701">Karma</A>
+<DD><A HREF="node65.html#6718">Karma</A>
 <DT><STRONG>L-atribuída</STRONG>
-<DD><A HREF="node47.html#5965">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5982">Definición Dirigida por la</A>
 <DT><STRONG>LALR</STRONG>
-<DD><A HREF="node38.html#4746">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4763">Construcción de las Tablas</A>
 <DT><STRONG>lenguaje de las formas sentenciales a rderechas</STRONG>
-<DD><A HREF="node37.html#4686">Conceptos Básicos del Análisis</A>
+<DD><A HREF="node37.html#4703">Conceptos Básicos del Análisis</A>
 <DT><STRONG>local storage</STRONG>
 <DD><A HREF="node10.html#2496">Local Storage (HTML5 Web</A>
 <DT><STRONG>LR</STRONG>
-<DD><A HREF="node37.html#4680">Conceptos Básicos del Análisis</A>
+<DD><A HREF="node37.html#4697">Conceptos Básicos del Análisis</A>
 <DT><STRONG>manecilla</STRONG>
-<DD><A HREF="node37.html#4692">Conceptos Básicos del Análisis</A>
+<DD><A HREF="node37.html#4709">Conceptos Básicos del Análisis</A>
 <DT><STRONG>mango</STRONG>
-<DD><A HREF="node37.html#4694">Conceptos Básicos del Análisis</A>
- | <A HREF="node37.html#4690">Conceptos Básicos del Análisis</A>
+<DD><A HREF="node37.html#4711">Conceptos Básicos del Análisis</A>
+ | <A HREF="node37.html#4707">Conceptos Básicos del Análisis</A>
 <DT><STRONG>Mocha TDD interface</STRONG>
-<DD><A HREF="node65.html#6695">TDD</A>
+<DD><A HREF="node65.html#6712">TDD</A>
 <DT><STRONG>NFA</STRONG>
-<DD><A HREF="node37.html#4700">Conceptos Básicos del Análisis</A>
+<DD><A HREF="node37.html#4717">Conceptos Básicos del Análisis</A>
 <DT><STRONG>orden parcial</STRONG>
-<DD><A HREF="node47.html#5959">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5976">Definición Dirigida por la</A>
 <DT><STRONG>orden topológico</STRONG>
-<DD><A HREF="node47.html#5961">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5978">Definición Dirigida por la</A>
 <DT><STRONG>parsing expression</STRONG>
-<DD><A HREF="node22.html#3547">Syntax</A>
+<DD><A HREF="node22.html#3554">Syntax</A>
 <DT><STRONG>parsing expression grammar</STRONG>
-<DD><A HREF="node22.html#3543">Introducción</A>
+<DD><A HREF="node22.html#3550">Introducción</A>
 <DT><STRONG>pattern matching</STRONG>
 <DD><A HREF="node10.html#2506">global.css</A>
 <DT><STRONG>PEG</STRONG>
-<DD><A HREF="node22.html#3545">Introducción</A>
+<DD><A HREF="node22.html#3552">Introducción</A>
 <DT><STRONG>Primeros</STRONG>
-<DD><A HREF="node38.html#4702">Los conjuntos de Primeros</A>
+<DD><A HREF="node38.html#4719">Los conjuntos de Primeros</A>
 <DT><STRONG>Práctica</STRONG>
 <DD><DL COMPACT>
 <DT><STRONG>Ambiguedad en C++</STRONG>
-<DD><A HREF="node31.html#3606">Práctica: Ambiguedad en C++</A>
+<DD><A HREF="node31.html#3615">Práctica: Ambiguedad en C++</A>
 <DT><STRONG>Analizador Léxico para Un Subconjunto de JavaScript</STRONG>
 <DD><A HREF="node17.html#2614">Práctica: Analizador Léxico para</A>
 <DT><STRONG>Calculadora  con Funciones</STRONG>
-<DD><A HREF="node40.html#4753">Práctica: Calculadora con Funciones</A>
+<DD><A HREF="node40.html#4770">Práctica: Calculadora con Funciones</A>
 <DT><STRONG>Calculadora con Análisis de Ámbito</STRONG>
-<DD><A HREF="node41.html#4755">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4772">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>Calculadora con Listas de Expresiones y Variables</STRONG>
-<DD><A HREF="node36.html#4679">Práctica: Calculadora con Listas</A>
+<DD><A HREF="node36.html#4696">Práctica: Calculadora con Listas</A>
 <DT><STRONG>Comma Separated Values. CSV</STRONG>
 <DD><A HREF="node10.html#2422">Práctica: Comma Separated Values.</A>
 <DT><STRONG>Conversor de Temperaturas</STRONG>
@@ -248,56 +248,58 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>Ficheros INI</STRONG>
 <DD><A HREF="node16.html#2567">Práctica: Ficheros INI</A>
 <DT><STRONG>Inventando un Lenguaje: Tortoise</STRONG>
-<DD><A HREF="node32.html#3608">Práctica: Inventando un Lenguaje:</A>
+<DD><A HREF="node32.html#3617">Práctica: Inventando un Lenguaje:</A>
 <DT><STRONG>Palabras Repetidas</STRONG>
 <DD><A HREF="node13.html#2533">Práctica: Palabras Repetidas</A>
 <DT><STRONG>Secuencia de Asignaciones Simples</STRONG>
-<DD><A HREF="node35.html#4645">Práctica: Secuencia de Asignaciones</A>
+<DD><A HREF="node35.html#4662">Práctica: Secuencia de Asignaciones</A>
 <DT><STRONG>Traducción de Infijo a Postfijo</STRONG>
-<DD><A HREF="node39.html#4751">Práctica: Traducción de Infijo</A>
+<DD><A HREF="node39.html#4768">Práctica: Traducción de Infijo</A>
 </DL>
 <DT><STRONG>recursion</STRONG>
-<DD><A HREF="node41.html#4764">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4781">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>recursiva por la derecha</STRONG>
-<DD><A HREF="node25.html#3575">Eliminación de la Recursión</A>
+<DD><A HREF="node25.html#3584">Eliminación de la Recursión</A>
 <DT><STRONG>recursiva por la izquierda</STRONG>
-<DD><A HREF="node23.html#3573">Asociación Incorrecta para la</A>
+<DD><A HREF="node23.html#3582">Asociación Incorrecta para la</A>
+<DT><STRONG>recursive descent parser</STRONG>
+<DD><A HREF="node22.html#3556">Implementing parsers from parsing</A>
 <DT><STRONG>reducción por defecto</STRONG>
-<DD><A HREF="node43.html#5909">defaultActions</A>
+<DD><A HREF="node43.html#5926">defaultActions</A>
 <DT><STRONG>reducción-reducción</STRONG>
-<DD><A HREF="node38.html#4744">Construcción de las Tablas</A>
- | <A HREF="node44.html#5917">Precedencia y Asociatividad</A>
+<DD><A HREF="node38.html#4761">Construcción de las Tablas</A>
+ | <A HREF="node44.html#5934">Precedencia y Asociatividad</A>
 <DT><STRONG>reentrant</STRONG>
-<DD><A HREF="node41.html#4762">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4779">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>register spilling</STRONG>
-<DD><A HREF="node41.html#4766">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4783">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>reglas de evaluación de los atributos</STRONG>
-<DD><A HREF="node47.html#5943">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5960">Definición Dirigida por la</A>
 <DT><STRONG>reglas semánticas</STRONG>
-<DD><A HREF="node47.html#5945">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5962">Definición Dirigida por la</A>
 <DT><STRONG>rightmost derivation</STRONG>
-<DD><A HREF="node37.html#4684">Conceptos Básicos del Análisis</A>
+<DD><A HREF="node37.html#4701">Conceptos Básicos del Análisis</A>
 <DT><STRONG>S-atribuída</STRONG>
-<DD><A HREF="node47.html#5967">Definición Dirigida por la</A>
+<DD><A HREF="node47.html#5984">Definición Dirigida por la</A>
 <DT><STRONG>session storage</STRONG>
 <DD><A HREF="node10.html#2498">Local Storage (HTML5 Web</A>
 <DT><STRONG>shortcut</STRONG>
 <DD><A HREF="node11.html#2528">favicons y shortcut icons</A>
 <DT><STRONG>siguientes</STRONG>
-<DD><A HREF="node38.html#4704">Los conjuntos de Primeros</A>
+<DD><A HREF="node38.html#4721">Los conjuntos de Primeros</A>
 <DT><STRONG>SLR</STRONG>
-<DD><A HREF="node38.html#4734">Construcción de las Tablas</A>
- | <A HREF="node38.html#4736">Construcción de las Tablas</A>
- | <A HREF="node38.html#4724">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4751">Construcción de las Tablas</A>
+ | <A HREF="node38.html#4753">Construcción de las Tablas</A>
+ | <A HREF="node38.html#4741">Construcción de las Tablas</A>
 <DT><STRONG>static link</STRONG>
-<DD><A HREF="node41.html#4760">Práctica: Calculadora con Análisis</A>
+<DD><A HREF="node41.html#4777">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>tabla de acciones</STRONG>
-<DD><A HREF="node38.html#4720">Construcción de las Tablas</A>
- | <A HREF="node38.html#4726">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4737">Construcción de las Tablas</A>
+ | <A HREF="node38.html#4743">Construcción de las Tablas</A>
 <DT><STRONG>tabla de gotos</STRONG>
-<DD><A HREF="node38.html#4718">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4735">Construcción de las Tablas</A>
 <DT><STRONG>tabla de saltos</STRONG>
-<DD><A HREF="node38.html#4716">Construcción de las Tablas</A>
+<DD><A HREF="node38.html#4733">Construcción de las Tablas</A>
 <DT><STRONG>target phase</STRONG>
 <DD><A HREF="node16.html#2582">Ficheros</A>
 <DT><STRONG>text area</STRONG>
@@ -305,7 +307,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>Web storage</STRONG>
 <DD><A HREF="node10.html#2492">Local Storage (HTML5 Web</A>
 <DT><STRONG>árbol sintáctico concreto</STRONG>
-<DD><A HREF="node34.html#4618">Conceptos Básicos para el</A>
+<DD><A HREF="node34.html#4635">Conceptos Básicos para el</A>
 
 </DL>
 
