--- a/node30.html
+++ b/node30.html
@@ -97,7 +97,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <B>Sup:</B> <A NAME="tex2html1186"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1180"
-  HREF="node29.html">PegJS en los Browser</A>
+  HREF="node29.html">Un Lenguaje Dependiente del</A>
 <B> Con:</B> 
 <A NAME="tex2html1187"
   HREF="node82.html">
@@ -286,7 +286,7 @@ en GitHub
 <B>Sup:</B> <A NAME="tex2html1186"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1180"
-  HREF="node29.html">PegJS en los Browser</A>
+  HREF="node29.html">Un Lenguaje Dependiente del</A>
 </DIV>
 <!--End of Navigation Panel-->
 <ADDRESS>
