--- a/node23.html
+++ b/node23.html
@@ -93,7 +93,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1079"
-  HREF="node24.html">Eliminación de la Recursividad</A>
+  HREF="node24.html">PegJS en los Browser</A>
 <B>Sup:</B> <A NAME="tex2html1073"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1067"
@@ -398,7 +398,7 @@ console.log(r);
  ALT="pcgull"></A>
 <BR>
 <B> Sig:</B> <A NAME="tex2html1079"
-  HREF="node24.html">Eliminación de la Recursividad</A>
+  HREF="node24.html">PegJS en los Browser</A>
 <B>Sup:</B> <A NAME="tex2html1073"
   HREF="node21.html">Análisis Descendente mediante Parsing</A>
 <B> Ant:</B> <A NAME="tex2html1067"
