--- a/node22.html
+++ b/node22.html
@@ -204,12 +204,12 @@ Each parsing rule in <SPAN CLASS="MATH"><IMG
  SRC="img3.png"
  ALT="$ P$"></SPAN> 
 has the form <!-- MATH
- $A \rightarrow e$
+ $A \leftarrow e$
  -->
 <SPAN CLASS="MATH"><IMG
  WIDTH="53" HEIGHT="16" ALIGN="BOTTOM" BORDER="0"
  SRC="img5.png"
- ALT="$ A \rightarrow e$"></SPAN>, 
+ ALT="$ A \leftarrow e$"></SPAN>, 
 where <SPAN CLASS="MATH"><IMG
  WIDTH="18" HEIGHT="15" ALIGN="BOTTOM" BORDER="0"
  SRC="img6.png"
@@ -559,7 +559,7 @@ Véanse [<A
 <!--End of Navigation Panel-->
 <ADDRESS>
 <I>Casiano Rodríguez León <BR>
-2014-02-26</I>
+2014-02-27</I>
 </ADDRESS>
 </BODY>
 </HTML>
