--- a/node22.html
+++ b/node22.html
@@ -369,7 +369,7 @@ performance in the worst case</FONT>.
 <P>
 It is possible to obtain better performance for any parsing expression
 grammar by converting its recursive descent parser into 
-<FONT COLOR="#ff0000">va packrat parser,
+<FONT COLOR="#ff0000"> a packrat parser,
 which always runs in linear time</FONT>, at the cost of substantially greater
 storage space requirements. 
 
